fix(compat): 4 surgical compat fixes uncovered by 1.0.51 validation
After tagging svc 1.0.51 (J17 overlays + IT tag-gate), re-running
the 4 compat jobs surfaced 4 NEW compilation issues — one per cell.
This commit ships the 4 surgical fixes :

1. **SB3 cells** — `CustomerController.PATH_CUSTOMERS` referenced
   by `CustomerEnrichmentController` + `CustomerDiagnosticsController`
   but the SB3 overlay still had `@RequestMapping("/customers")`
   literal. Adds the `static final String PATH_CUSTOMERS = "/customers"`
   field to the SB3 overlay. (compat-sb3-java17 + compat-sb3-java21)

2. **SB3 cells** — `SecurityConfig.securityFilterChain()` lacked
   `throws Exception`. SB3's HttpSecurity DSL methods declare
   `throws Exception` while SB4 dropped them. Adding the throws
   to the main file (no overlay needed) is a no-op in SB4
   (stricter signature, never thrown) and fixes SB3 compile.

3. **SB4+J17 cell** — `CustomerNewEndpointsITest.java` used
   `findAll().getFirst().getId()` 6× (J21+ API). Replaced with
   `findAll().get(0).getId()` (universal, J1+). Same surgical
   pattern as `page.get(page.size()-1)` in CustomerService.java
   (svc 1.0.51 wave). compat-sb4-java17.

4. **SB4+J17 cell** — `AggregationServicePropertyTest.java` used
   `Executors.newVirtualThreadPerTaskExecutor()` (J21+) AND
   try-with-resources on `ExecutorService` (J19+). Created a
   J17 test overlay (`src/test/java-overlays/java17/...`) using
   platform threads + try/finally. Added a Maven antrun copy
   step (symmetric to the main java17 overlay) — only applies
   when `-Djava17` set.

Local validation :
- `./mvnw -Dsb3 compile` → green ✅
- `./mvnw -Dcompat -Djava17 test-compile` → green ✅
- `./mvnw -Dcompat compile` → green ✅

Remaining SB3 structural debt (deferred — needs separate wave) :
- `AutoConfigureMockMvc.java` shim references SB3 package
  `org.springframework.boot.test.autoconfigure.web.servlet`
  which isn't on test classpath (missing spring-boot-test-
  autoconfigure dep wiri